added resume and contact information

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<section class="banner style2 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Kareem Sinan</h1>
-							<a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
+							<a href="https://drive.google.com/file/d/1iEzVtX62sW5XMuT_KyG4WM1vO9yCVq89/view?usp=sharing" class="button big wide smooth-scroll-middle">My Resume</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -161,18 +161,18 @@
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
 									<span class="icon solid style2 major fa-code"></span>
-									<h3>Software Development Intern</h3>
-									<p>...</p>
+									<h3>Software Development Intern At CCTech</h3>
+									<p></p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-terminal"></span>
 									<h3>HeadStarter Software Engineering Fellowship</h3>
-									<p>...</p>
+									<p></p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-file"></span>
-									<h3>Masjidy</h3>
-									<p>Co-Founder & Lead Developer</p>
+									<h3>Masjidy, Co-Founder & Lead Developer</h3>
+									<p></p>
 								</section>
 							</div>
 						</div>
@@ -182,15 +182,18 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
 							<h2>Get in touch</h2>
-							<form method="post" action="#">
+
+							<h4>Email: kareemsnn@gmail.com </h4>
+							<h4>Phone: +1 813-313-9753</h4>
+							<!-- <form method="post" action="#">
 								<div class="fields">
 									<div class="field half">
 										<label for="name">Name</label>
 										<input type="text" name="name" id="name" value="" />
 									</div>
 									<div class="field half">
-										<label for="email">Email</label>
-										<input type="email" name="email" id="email" value="" />
+										<label for="email">Email: kareemsnn@gmail.com</label>
+
 									</div>
 									<div class="field">
 										<label for="message">Message</label>
@@ -200,7 +203,7 @@
 								<ul class="actions special">
 									<li><input type="submit" name="submit" id="submit" value="Send Message" /></li>
 								</ul>
-							</form>
+							</form> -->
 
 						</div>
 					</section>
