changed to machine learning intern & masjidy to jamaa

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
 									<span class="icon solid style2 major fa-code"></span>
-									<h3>Software Development Intern At CCTech</h3>
+									<h3>Machine Learning Intern At CCTech</h3>
 									<p></p>
 								</section>
 								<section>
@@ -171,7 +171,7 @@
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-file"></span>
-									<h3>Masjidy, Co-Founder & Lead Developer</h3>
+									<h3>Jamaa, Co-Founder & Lead Developer</h3>
 									<p></p>
 								</section>
 							</div>
